[package]
name = "baid58"
version = "0.3.1"
description = "Easy-to-check Base58 encoding for identities"
keywords = ["base58", "encoding", "mnemonic"]
categories = ["encoding", "value-formatting", "command-line-utilities"]
readme = "README.md"
authors = ["Dr. Maxim Orlovsky <orlovsky@ubideco.org>"]
homepage = "https://github.com/UBIDECO/rust-baid58"
repository = "https://github.com/UBIDECO/rust-baid58"
rust-version = "1.60.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
base58 = "0.2.0"
blake3 = "1.3.3"
mnemonic = "1.0.1"
